# shared_storage

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/shared_storage/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  export.txt  sst_main.cpp
app/src/main/java/com/example/shared_storage/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/shared_storage/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
